--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-WDI 29 Gaia
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Gaia — SF WDI 29</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/theme.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+	</head>
+	<body>
+
+		<!-- Banner -->
+			<section id="banner" class="hero">
+				<h2><strong>Gaia</strong> SF WDI26</h2>
+				<p>Make Internets!</p>
+				<ul class="actions">
+					<li><a href="https://github.com/sf-wdi-29/schedule" class="button special" target="_blank">Schedule</a></li>
+					<li><a href="https://github.com/sf-wdi-29" class="button special" target="_blank">Organization</a></li>
+					<li><a href="https://garnet.wdidc.org" class="button special" target="_blank">Manager</a></li>
+				</ul>
+				<img class="icon" src="assets/svgs/internet.svg" alt="internet" />
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="copyright">
+					&copy; <a href="https://generalassemb.ly">General Assembly</a>.
+				</div>
+			</footer>
+
+	</body>
+	<!-- Theme: http://templated.co/typify  -->
+</html>
