--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 		<!-- Banner -->
 			<section id="banner" class="hero">
-				<h2><strong>Gaia</strong> SF WDI29</h2>
+				<h2>SF WDI31</h2>
 				<p>Make Internets!</p>
 				<ul class="actions">
-					<li><a href="https://github.com/sf-wdi-29/schedule" class="button special" target="_blank">Schedule</a></li>
-					<li><a href="https://github.com/sf-wdi-29" class="button special" target="_blank">Organization</a></li>
-					<li><a href="https://garnet.wdidc.org" class="button special" target="_blank">Manager</a></li>
+					<li><a href="#" class="button special" target="_blank">Schedule</a></li>
+					<li><a href="#" target="_blank" class="button special">Organization</a></li>
+					<li><a href="#" target="_blank" class="button special">Manager</a></li>
 				</ul>
 				<img class="icon" src="assets/svgs/internet.svg" alt="internet" />
 			</section>
