links to schedule

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<p>Make Internets!</p>
 				<ul class="actions">
 					<li><a href="#" class="button special" target="_blank">Schedule</a></li>
-					<li><a href="#" target="_blank" class="button special">Organization</a></li>
+					<li><a href="https://github.com/sf-wdi-31" target="_blank" class="button special">Organization</a></li>
 					<li><a href="#" target="_blank" class="button special">Manager</a></li>
 				</ul>
 				<img class="icon" src="assets/svgs/internet.svg" alt="internet" />
