--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 				<h2><strong class="cohort-name">π</strong> SF WDI31</h2>
 				<p>Make Internets!</p>
 				<ul class="actions">
-					<li><a href="#" class="button special" target="_blank">Schedule</a></li>
+					<li><a href="https://github.com/sf-wdi-31/schedule" class="button special" target="_blank">Schedule</a></li>
 					<li><a href="https://github.com/sf-wdi-31" target="_blank" class="button special">Organization</a></li>
-					<li><a href="#" target="_blank" class="button special">Manager</a></li>
 				</ul>
 				<img class="icon" src="assets/svgs/internet.svg" alt="internet" />
 			</section>
